Updated other contrast issues

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -343,7 +343,7 @@ em, i {
 .post h2.headline {
     font: normal 13px/1.5em "Helvetica Neue", Helvetica, Arial, sans-serif;
     margin: -5px 0 0 0;
-    color: #b2b9be;
+    color: #333;
     font-size: 13px;
     letter-spacing: 1px;
     display: inline-block;
